--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/peterhaldbaek/mt-latlon.git"
   },
   "keywords": [
+    "geodesy",
     "geo",
     "latitude",
     "longitude"
